# cpp-pbt-example

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  stateful.cpp  stateless.cpp
